--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="enter_your_email">Enter your email</string>
     <string name="save_user">Save</string>
     <string name="cancel">Cancel</string>
+    <string name="checked_ro_show">Save password ?</string>
+    <string name="do_you_want_to_show_password">Do you want to show password.</string>
 </resources>
